--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div class="main game-view">
         <div class="main-card">
 
+            <div class="game-timer" style="display: none;">
+                <div class="title">The race is about to start!</div>
+                <div class="time-display">1:30</div>
+            </div>
+
+            <div class="game-starter-timer"></div>
+
             <div class="result">
                 <div class="result-contents">
                     <div class="result-progress">
@@ -22,14 +29,16 @@
                                 <div class="name" style="white-space: nowrap;">Mahfuz</div>
                                 <span class="username">(you)</span>
                             </div>
-                            <div class="avatar-container" style="background-image: url(&quot;https://data.typeracer.com/public/images/avatars/basic-orange.svg&quot;);"></div>
+                            <!-- <div class="avatar-container" style="background-image: url(&quot;https://data.typeracer.com/public/images/avatars/basic-orange.svg&quot;);"></div> -->
+                            <!-- <div class="avatar-container" style="background-image: url('https://data.typeracer.com/public/images/avatars/spring-cherryblossom-free.svg')"></div> -->
+                            <div class="avatar-container" style="background-image: url('https://data.typeracer.com/public/images/avatars/spring-cherryblossom-drag.svg')"></div>
                         </div>
                     </div>
-                    <div class="wpm">44 wpm</div>
+                    <div class="wpm">0 wpm</div>
                 </div>
             </div>
 
-            <div class="input-panel game-input-panel">
+            <div class="input-panel game-input-panel" style="display: none;">
                 <div class="text-part">
                     <div>
                         <div class="text-container">
@@ -39,14 +48,16 @@
                 </div>
 
                 <div class="">
-                    <input maxlength="15" class="text-input" />
+                    <input disabled maxlength="15" class="text-input" />
                 </div>
 
             </div>
 
 
             <div class="action-buttons">
-                <div></div>
+                <div>
+                    <button onclick="endRace()" class="leave-race-btn" style="display: none;">Leave Race</button>
+                </div>
                 <div class="">
                     <button onclick="startRace()" class="start-race-btn">Start Race</button>
                 </div>
