jquery added locally

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <script src="js/playersManager.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="/jquery.min.js"></script>
     <script src="js/user_info.js"></script>
     <script src="socket.js"></script>
     <script src="script.js"></script>
